remove guarantee throughout

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -214,9 +214,7 @@ Lime work can&rsquo;t be rushed. We take the time to do things properly, because
 <p><strong>Local Knowledge</strong>
 We know the Cotswolds – the stone types, the building traditions, what works and what doesn&rsquo;t. That local expertise matters.</p>
 <p><strong>Standing Behind Our Work</strong>
-Every job comes with our 10-year insurance-backed guarantee. We&rsquo;re confident in our work, and we want you to be too.</p>
-<h3 id="our-guarantee">Our Guarantee</h3>
-<p>All our work is covered by a comprehensive 10-year insurance-backed guarantee. This means that even if something were to happen to us, your guarantee remains valid. It&rsquo;s the peace of mind you deserve when investing in your property.</p>
+We&rsquo;re confident in our craftsmanship and use only quality materials. Every project receives the same attention to detail, whether it&rsquo;s a small repair or a complete restoration.</p>
 
   </div>
 </article>
@@ -246,7 +244,6 @@ Every job comes with our 10-year insurance-backed guarantee. We&rsquo;re confide
       <div class="footer-brand">
         <img src="http://localhost:1313/images/logo.png" alt="Severn Damp Proofing Ltd" height="45">
         <p>Traditional lime plastering and damp proofing specialists with over 35&#43; years combined experience. Serving Stroud, Cirencester, Tetbury and the Cotswolds with craftsmanship you can trust.</p>
-        <p><strong>10 year insurance backed guarantee</strong></p>
       </div>
       
       
@@ -321,7 +318,7 @@ Every job comes with our 10-year insurance-backed guarantee. We&rsquo;re confide
     <button class="floating-form-close" id="floating-form-close" aria-label="Close form">&times;</button>
   </div>
   <div class="floating-form-body">
-    <form action="https://formspree.io/f/severndampproofing@icloud.com" method="POST" class="contact-form">
+    <form action="https://formspree.io/f/maqedbqd" method="POST" class="contact-form">
       <div class="form-group">
         <label for="float-name">Your Name *</label>
         <input type="text" id="float-name" name="name" required placeholder="John Smith">
