--- a/public/services/lime-plastering/index.html
+++ b/public/services/lime-plastering/index.html
@@ -222,8 +222,8 @@ Traditional lime-based finishes for both internal and external use. Breathable, 
 <li>Pozzolanic additives where appropriate</li>
 <li>Locally-sourced aggregates for authentic appearance</li>
 </ul>
-<h3 id="our-guarantee">Our Guarantee</h3>
-<p>All our lime plastering work comes with a 10-year insurance-backed guarantee. We&rsquo;re confident in our materials and methods, and we stand behind every project we complete.</p>
+<h3 id="our-commitment">Our Commitment</h3>
+<p>We&rsquo;re confident in our materials and methods, and we stand behind every project we complete. Quality craftsmanship using traditional techniques ensures lasting results for your property.</p>
 
   </div>
 </article>
@@ -253,7 +253,6 @@ Traditional lime-based finishes for both internal and external use. Breathable, 
       <div class="footer-brand">
         <img src="http://localhost:1313/images/logo.png" alt="Severn Damp Proofing Ltd" height="45">
         <p>Traditional lime plastering and damp proofing specialists with over 35&#43; years combined experience. Serving Stroud, Cirencester, Tetbury and the Cotswolds with craftsmanship you can trust.</p>
-        <p><strong>10 year insurance backed guarantee</strong></p>
       </div>
       
       
@@ -328,7 +327,7 @@ Traditional lime-based finishes for both internal and external use. Breathable, 
     <button class="floating-form-close" id="floating-form-close" aria-label="Close form">&times;</button>
   </div>
   <div class="floating-form-body">
-    <form action="https://formspree.io/f/severndampproofing@icloud.com" method="POST" class="contact-form">
+    <form action="https://formspree.io/f/maqedbqd" method="POST" class="contact-form">
       <div class="form-group">
         <label for="float-name">Your Name *</label>
         <input type="text" id="float-name" name="name" required placeholder="John Smith">
