--- a/public/areas/tetbury/index.html
+++ b/public/areas/tetbury/index.html
@@ -222,7 +222,7 @@
 <li><strong>Material matching</strong>: Lime mortars mixed to complement your stone</li>
 <li><strong>Traditional techniques</strong>: Applied by experienced craftsmen</li>
 <li><strong>Clear communication</strong>: We explain what we&rsquo;re doing and why</li>
-<li><strong>Lasting results</strong>: Backed by our 10-year insurance guarantee</li>
+<li><strong>Lasting results</strong>: Quality materials and traditional techniques</li>
 </ul>
 <p>Don&rsquo;t trust your period property to general builders who might reach for the cement bag. Let us show you how proper lime plastering and damp treatment should be done.</p>
 
@@ -294,7 +294,7 @@
         <div class="service-card">
           <div class="service-content">
             <h3>Damp Proofing in Lime Plastering &amp; Damp Proofing in Tetbury</h3>
-            <p>Comprehensive damp surveys and treatment for properties in Lime Plastering &amp; Damp Proofing in Tetbury. We diagnose the root cause of your damp issues and provide lasting solutions backed by our 10-year guarantee.</p>
+            <p>Comprehensive damp surveys and treatment for properties in Lime Plastering &amp; Damp Proofing in Tetbury. We diagnose the root cause of your damp issues and provide lasting solutions using proven methods.</p>
             <ul class="service-features">
               <li>
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"></polyline></svg>
@@ -367,7 +367,6 @@
       <div class="footer-brand">
         <img src="http://localhost:1313/images/logo.png" alt="Severn Damp Proofing Ltd" height="45">
         <p>Traditional lime plastering and damp proofing specialists with over 35&#43; years combined experience. Serving Stroud, Cirencester, Tetbury and the Cotswolds with craftsmanship you can trust.</p>
-        <p><strong>10 year insurance backed guarantee</strong></p>
       </div>
       
       
@@ -442,7 +441,7 @@
     <button class="floating-form-close" id="floating-form-close" aria-label="Close form">&times;</button>
   </div>
   <div class="floating-form-body">
-    <form action="https://formspree.io/f/severndampproofing@icloud.com" method="POST" class="contact-form">
+    <form action="https://formspree.io/f/maqedbqd" method="POST" class="contact-form">
       <div class="form-group">
         <label for="float-name">Your Name *</label>
         <input type="text" id="float-name" name="name" required placeholder="John Smith">
