--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -256,7 +256,6 @@
       <div class="footer-brand">
         <img src="http://localhost:1313/images/logo.png" alt="Severn Damp Proofing Ltd" height="45">
         <p>Traditional lime plastering and damp proofing specialists with over 35&#43; years combined experience. Serving Stroud, Cirencester, Tetbury and the Cotswolds with craftsmanship you can trust.</p>
-        <p><strong>10 year insurance backed guarantee</strong></p>
       </div>
       
       
@@ -331,7 +330,7 @@
     <button class="floating-form-close" id="floating-form-close" aria-label="Close form">&times;</button>
   </div>
   <div class="floating-form-body">
-    <form action="https://formspree.io/f/severndampproofing@icloud.com" method="POST" class="contact-form">
+    <form action="https://formspree.io/f/maqedbqd" method="POST" class="contact-form">
       <div class="form-group">
         <label for="float-name">Your Name *</label>
         <input type="text" id="float-name" name="name" required placeholder="John Smith">
