--- a/public/about/index.html
+++ b/public/about/index.html
@@ -212,7 +212,7 @@
 </header>
 
 
-<article class="section">
+<article class="section content-page">
   <div class="container container--narrow">
     <h2 id="who-we-are">Who We Are</h2>
 <p>We&rsquo;re Severn Damp Proofing Ltd – a small team of experienced craftsmen based in Stroud, Gloucestershire. We specialise in two things: <strong>traditional lime plastering</strong> and <strong>professional damp proofing</strong>.</p>
