--- a/public/services/damp-proofing/index.html
+++ b/public/services/damp-proofing/index.html
@@ -212,7 +212,7 @@
 </header>
 
 
-<article class="section">
+<article class="section content-page">
   <div class="container container--narrow">
     <h2 id="comprehensive-damp-solutions">Comprehensive Damp Solutions</h2>
 <p>Damp isn&rsquo;t just unsightly – it damages your property and can affect your health. But before reaching for a &ldquo;solution,&rdquo; it&rsquo;s crucial to understand what&rsquo;s actually causing the problem. That&rsquo;s where we start.</p>
