--- a/public/services/lime-plastering/index.html
+++ b/public/services/lime-plastering/index.html
@@ -212,7 +212,7 @@
 </header>
 
 
-<article class="section">
+<article class="section content-page">
   <div class="container container--narrow">
     <h2 id="traditional-lime-plastering-for-heritage-properties-in-gloucestershire">Traditional Lime Plastering for Heritage Properties in Gloucestershire</h2>
 <p>Lime plastering isn&rsquo;t just another building trade – it&rsquo;s a craft that has protected buildings for thousands of years. Unlike modern cement-based products, lime allows your walls to breathe, preventing the moisture build-up that causes so many problems in old buildings.</p>
