--- a/public/services/lime-rendering/index.html
+++ b/public/services/lime-rendering/index.html
@@ -212,28 +212,56 @@
 </header>
 
 
-<article class="section">
+<article class="section content-page">
   <div class="container container--narrow">
     <h2 id="professional-lime-rendering-for-period-properties">Professional Lime Rendering for Period Properties</h2>
 <p>Lime rendering is one of the most important services we provide for heritage buildings across the Cotswolds. Unlike modern cement renders that trap moisture and cause stone decay, traditional lime render works with your building&rsquo;s natural structure, allowing solid walls to breathe while providing lasting weather protection.</p>
+<div class="stats-row">
+  <div class="stat-item">
+    <div class="stat-number">35+</div>
+    <div class="stat-label">Years Experience</div>
+  </div>
+  <div class="stat-item">
+    <div class="stat-number">500+</div>
+    <div class="stat-label">Properties Restored</div>
+  </div>
+  <div class="stat-item">
+    <div class="stat-number">100%</div>
+    <div class="stat-label">Breathable Materials</div>
+  </div>
+</div>
 <h3 id="why-lime-rendering-matters-for-cotswold-stone">Why Lime Rendering Matters for Cotswold Stone</h3>
 <p>Cotswold stone properties were never designed for cement-based products. These beautiful buildings, from Grade II Listed Georgian townhouses to humble stone barn conversions, rely on breathable materials to manage moisture. When cement render is applied to Cotswold stone, it creates a waterproof barrier that traps moisture inside the wall, leading to:</p>
 <ul>
 <li><strong>Stone decay and spalling</strong> as trapped water freezes and expands</li>
-<li><strong>Rising damp symptoms</strong> as moisture cannot escape through the walls</li>
+<li><strong>Rising <a href="http://localhost:1313/services/damp-proofing/">damp</a> symptoms</strong> as moisture cannot escape through the walls</li>
 <li><strong>Salt crystallisation</strong> damaging internal plaster and decorations</li>
 <li><strong>Structural problems</strong> as the stone deteriorates over time</li>
 </ul>
 <p>Traditional lime render, by contrast, allows moisture to pass through the wall naturally – the building can &ldquo;breathe&rdquo; as it was designed to do.</p>
+<div class="content-block content-block--gold">
+<h4>Did You Know?</h4>
+<p>Cotswold limestone is inherently porous – it needs to release moisture naturally. Cement-based renders can trap up to 90% more moisture than traditional lime, accelerating decay that can cost thousands to repair.</p>
+</div>
 <h3 id="our-lime-rendering-services">Our Lime Rendering Services</h3>
-<p><strong>External Lime Render</strong>
-We apply traditional lime render to external walls using hydraulic lime (NHL) suited to the exposure conditions of your property. Our renders are mixed with locally-sourced aggregates to complement the warm honey tones of Cotswold stone.</p>
-<p><strong>Lime Render Repairs</strong>
-Many properties have patches of failed cement render alongside original lime work. We carefully remove inappropriate materials and blend new lime render seamlessly with existing surfaces.</p>
-<p><strong>Render Removal</strong>
-Where cement render has been applied to historic buildings, we can carefully remove it and restore the wall to its proper breathable state – either with new lime render or exposed stone pointing.</p>
-<p><strong>Breathable Mineral Paints</strong>
-For rendered surfaces, we recommend breathable mineral paints that maintain the vapour permeability of the lime render beneath. We can advise on appropriate finishes for your property.</p>
+<div class="feature-grid">
+<div class="feature-box">
+<h4>External Lime Render</h4>
+<p>Traditional lime render using hydraulic lime (NHL) suited to your property's exposure conditions, mixed with locally-sourced aggregates.</p>
+</div>
+<div class="feature-box feature-box--gold">
+<h4>Lime Render Repairs</h4>
+<p>Careful removal of failed cement render and seamless blending of new lime work with existing surfaces.</p>
+</div>
+<div class="feature-box feature-box--slate">
+<h4>Render Removal</h4>
+<p>Expert removal of inappropriate cement render, restoring your walls to their proper breathable state.</p>
+</div>
+<div class="feature-box">
+<h4>Breathable Finishes</h4>
+<p>Breathable mineral paints that maintain vapour permeability while protecting your lime render.</p>
+</div>
+</div>
 <h3 id="materials-we-use">Materials We Use</h3>
 <p><strong>Hydraulic Lime (NHL)</strong>
 For most external rendering work, we use natural hydraulic lime (NHL 3.5 or NHL 5) depending on exposure. These limes set through a chemical reaction with water, providing durability and weather resistance while remaining breathable.</p>
@@ -242,24 +270,57 @@ For sheltered situations and internal work, traditional fat lime (lime putty) of
 <p><strong>Aggregates</strong>
 We source sands and aggregates locally where possible, matching the colour and texture of original renders. This attention to detail ensures repairs blend naturally with existing work.</p>
 <h3 id="the-lime-rendering-process">The Lime Rendering Process</h3>
-<p><strong>1. Survey and Specification</strong>
-Every lime rendering project starts with a thorough assessment. We examine the existing wall construction, identify any damp issues, and specify appropriate materials for the conditions.</p>
-<p><strong>2. Preparation</strong>
-Proper preparation is essential. We remove loose material, rake out joints where necessary, and ensure the substrate is suitable for the new render.</p>
-<p><strong>3. Application</strong>
-Lime render is typically applied in two or three coats, allowing each to cure properly before the next. This takes longer than cement work but produces far superior results.</p>
-<p><strong>4. Finishing</strong>
-The final coat can be finished in various ways – from a smooth, floated surface to a more rustic texture. We match the finish to your property&rsquo;s character and any conservation requirements.</p>
+<ol>
+<li>
+<p><strong>Survey and Specification</strong> – Every project starts with a thorough assessment. We examine existing construction, identify any <a href="http://localhost:1313/services/damp-proofing/">damp issues</a>, and specify appropriate materials.</p>
+</li>
+<li>
+<p><strong>Preparation</strong> – We remove loose material, rake out joints where necessary, and ensure the substrate is suitable for new render.</p>
+</li>
+<li>
+<p><strong>Application</strong> – Lime render is applied in two or three coats, allowing each to cure properly. This takes longer than cement but produces superior results.</p>
+</li>
+<li>
+<p><strong>Finishing</strong> – The final coat is finished to match your property&rsquo;s character – from smooth floated surfaces to rustic textures.</p>
+</li>
+</ol>
 <h3 id="solving-damp-in-solid-walls">Solving Damp in Solid Walls</h3>
-<p>One of the most common reasons clients contact us for lime rendering is damp problems in period properties. Often, these issues stem from previous inappropriate repairs – cement pointing, modern renders, or non-breathable paints preventing stone decay.</p>
-<p>By restoring breathability to your walls with lime render, you address the root cause of many damp issues. Combined with proper maintenance of gutters, drains, and ground levels, this approach solves damp problems permanently rather than masking symptoms.</p>
+<p>One of the most common reasons clients contact us for lime rendering is <a href="http://localhost:1313/services/damp-proofing/">damp problems</a> in period properties. Often, these issues stem from previous inappropriate repairs – cement pointing, modern renders, or non-breathable paints.</p>
+<p>By restoring breathability with lime render, you address the root cause of many damp issues. Combined with proper maintenance of gutters, drains, and ground levels, this approach solves problems permanently rather than masking symptoms.</p>
 <h3 id="areas-we-cover">Areas We Cover</h3>
-<p>We provide lime rendering services throughout Gloucestershire and the Cotswolds, including:</p>
+<p>We provide lime rendering services throughout Gloucestershire and the Cotswolds:</p>
 <ul>
-<li><strong>Stroud and the Five Valleys</strong> – Minchinhampton, Nailsworth, Rodborough, Chalford</li>
-<li><strong>Cirencester and surrounding villages</strong> – Sapperton, Fairford, Bibury, Ampney Crucis</li>
-<li><strong>Tetbury and the southern Cotswolds</strong> – Westonbirt, Beverston, Shipton Moyne</li>
+<li><strong><a href="http://localhost:1313/areas/stroud-lime-rendering-plastering/">Stroud and the Five Valleys</a></strong> – Minchinhampton, Nailsworth, Rodborough, Chalford</li>
+<li><strong><a href="http://localhost:1313/areas/cirencester-lime-rendering-plastering/">Cirencester and surrounding villages</a></strong> – Sapperton, Fairford, Bibury, Ampney Crucis</li>
+<li><strong><a href="http://localhost:1313/areas/tetbury-lime-rendering-plastering/">Tetbury and the southern Cotswolds</a></strong> – Westonbirt, Beverston, Shipton Moyne</li>
 </ul>
+<div class="faq-section">
+<h3>Frequently Asked Questions</h3>
+<div class="faq-item">
+<h4 class="faq-question">Do I need lime render for a Grade II listed building?</h4>
+<div class="faq-answer">
+<p>Yes, lime render is typically required for listed buildings. Conservation officers expect traditional materials that are compatible with historic construction. Cement-based renders are almost always inappropriate for listed properties and may not receive planning approval. We have extensive experience working with conservation officers and can advise on appropriate specifications.</p>
+</div>
+</div>
+<div class="faq-item">
+<h4 class="faq-question">How long does lime rendering take to dry?</h4>
+<div class="faq-answer">
+<p>Lime render cures differently to cement – it carbonates gradually over several weeks. Each coat typically needs 3-7 days before the next can be applied, depending on weather conditions. Full carbonation takes several months, during which time the render continues to strengthen. We schedule work to allow proper curing between coats.</p>
+</div>
+</div>
+<div class="faq-item">
+<h4 class="faq-question">Is lime rendering more expensive than cement?</h4>
+<div class="faq-answer">
+<p>Lime rendering typically costs more upfront due to material costs and the longer application process. However, it's a better long-term investment for period properties – cement render often causes expensive damage to historic stonework that far exceeds the initial savings.</p>
+</div>
+</div>
+<div class="faq-item">
+<h4 class="faq-question">Can you remove existing cement render?</h4>
+<div class="faq-answer">
+<p>Yes, we regularly remove inappropriate cement render from period properties. This must be done carefully to avoid damaging the underlying stonework. Once removed, we can either apply new lime render or restore the wall to exposed stone with lime pointing.</p>
+</div>
+</div>
+</div>
 <h3 id="get-a-free-quote">Get a Free Quote</h3>
 <p>If your period property needs lime rendering – whether a complete external render or repairs to failing cement work – we&rsquo;d be happy to provide a free survey and quotation. Contact us to arrange a convenient time for one of our experienced surveyors to visit.</p>
 
